working bot now woohoo

--- a/adb_config.json
+++ b/adb_config.json
@@ -45,11 +45,11 @@
   ],
   "series_buttons": {
     "B": [
-      195,
-      1369
+      203,
+      1371
     ],
     "A": [
-      525,
+      531,
       1370
     ]
   },
@@ -82,5 +82,15 @@
     562,
     378,
     921
+  ],
+  "pokemon_app_icon": [
+    164,
+    395
+  ],
+  "reward_detection_region": [
+    569,
+    571,
+    293,
+    805
   ]
 }
